Creacion de metodo para leer txt
Se creo metodo para leer archivos de textos para agregar los equipos o Deportistas 🔥🔥